--- a/accounts/templates/accounts/rooms.html
+++ b/accounts/templates/accounts/rooms.html
@@ -31,31 +31,31 @@
     </div>
 
     <div style="position:absolute; top:150px; left:450px; ">
-        <a href='/account/confirm/'><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href='/account/confirm/AG-01'}'><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-01</p>
 
     </div>
        <div style="position:absolute; top:150px; left:550px;">
-            <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+            <a href="/account/confirm/AG-02" ><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
            <p>AG-02</p>
        </div>
        <div style="position:absolute; top:150px; left:650px; ">
-        <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/AG-03"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-03</p>
 
     </div>
        <div style="position:absolute; top:150px; left:750px; ">
-        <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/AG-04"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-04</p>
 
     </div>
        <div style="position:absolute; top:150px; left:850px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-05"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-05</p>
 
     </div>
        <div style="position:absolute; top:150px; left:950px; ">
-        <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/AG-06"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-06</p>
 
     </div>
@@ -68,32 +68,32 @@
 
        </div>
        <div style="position:absolute; top:200px; left:200px; ">
-        <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/AG-22"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-22</p>
 
     </div>
         </div>
        <div style="position:absolute; top:300px; left:200px; ">
-        <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/AG-21"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-21</p>
 
     </div>
         </div>
        <div style="position:absolute; top:400px; left:200px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-20"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-20</p>
 
     </div>
         </div>
        <div style="position:absolute; top:500px; left:200px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-19"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-19</p>
 
     </div>
        </div>
         </div>
        <div style="position:absolute; top:600px; left:200px; ">
-        <a href="confirm.html"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/AG-18"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-18</p>
 
     </div>
@@ -109,7 +109,7 @@
        </div>
         </div>
        <div style="position:absolute; top:750px; left:450px; ">
-        <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/AG-17"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-17</p>
 
     </div>
@@ -117,7 +117,7 @@
        </div>
         </div>
        <div style="position:absolute; top:750px; left:550px; ">
-        <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/AG-16"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-16</p>
 
     </div>
@@ -125,7 +125,7 @@
        </div>
         </div>
        <div style="position:absolute; top:750px; left:650px; ">
-        <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/AG-15"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-15</p>
 
     </div>
@@ -133,7 +133,7 @@
        </div>
         </div>
        <div style="position:absolute; top:750px; left:750px; ">
-        <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/AG-14"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-14</p>
 
     </div>
@@ -141,7 +141,7 @@
        </div>
         </div>
        <div style="position:absolute; top:750px; left:850px; ">
-        <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/AG-13"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-13</p>
 
     </div>
@@ -149,7 +149,7 @@
        </div>
         </div>
        <div style="position:absolute; top:750px; left:950px; ">
-        <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/AG-12"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-12</p>
 
     </div>
@@ -165,35 +165,35 @@
     </div>
         </div>
        <div style="position:absolute; top:200px; left:1200px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-07"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-07</p>
 
     </div>
        </div>
         </div>
        <div style="position:absolute; top:300px; left:1200px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-08"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-08</p>
 
     </div>
     </div>
         </div>
        <div style="position:absolute; top:400px; left:1200px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-09"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-09</p>
 
     </div>
        </div>
         </div>
        <div style="position:absolute; top:500px; left:1200px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-10"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-10</p>
 
     </div>
        </div>
         </div>
        <div style="position:absolute; top:600px; left:1200px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-11"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-11</p>
 
     </div>
@@ -204,27 +204,27 @@
     </div>
         </div>
        <div style="position:absolute; top:250px; left:1100px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-28"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-28</p>
 
     </div>
        </div>
         </div>
        <div style="position:absolute; top:350px; left:1100px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-29"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-29</p>
 
     </div>
        </div>
         </div>
        <div style="position:absolute; top:450px; left:1100px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-30"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-30</p>
 
     </div>
 
        <div style="position:absolute; top:550px; left:1100px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-31"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-31</p>
 
     </div>
@@ -241,7 +241,7 @@
        </div>
         </div>
        <div style="position:absolute; top:650px; left:500px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-36"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-36</p>
 
     </div>
@@ -249,7 +249,7 @@
        </div>
         </div>
        <div style="position:absolute; top:650px; left:600px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-35"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-35</p>
 
     </div>
@@ -257,7 +257,7 @@
        </div>
         </div>
        <div style="position:absolute; top:650px; left:700px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-34"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-34</p>
 
     </div>
@@ -265,7 +265,7 @@
        </div>
         </div>
        <div style="position:absolute; top:650px; left:800px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-33"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-33</p>
 
     </div>
@@ -273,7 +273,7 @@
        </div>
         </div>
        <div style="position:absolute; top:650px; left:900px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-32"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-32</p>
 
     </div>
@@ -284,7 +284,7 @@
        </div>
         </div>
        <div style="position:absolute; top:250px; left:300px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-40"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-40</p>
 
     </div>
@@ -292,7 +292,7 @@
        </div>
         </div>
        <div style="position:absolute; top:350px; left:300px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-39"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-39</p>
 
     </div>
@@ -300,7 +300,7 @@
        </div>
         </div>
        <div style="position:absolute; top:450px; left:300px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-38"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-38</p>
 
     </div>
@@ -308,7 +308,7 @@
        </div>
         </div>
        <div style="position:absolute; top:550px; left:300px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-37"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-37</p>
 
     </div>
@@ -321,23 +321,23 @@
         </div>
 
        <div style="position:absolute; top:250px; left:500px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-23"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-23</p>
        </div>
         <div style="position:absolute; top:250px; left:600px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-24"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-24</p>
        </div>
         <div style="position:absolute; top:250px; left:700px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-25"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-25</p>
        </div>
         <div style="position:absolute; top:250px; left:800px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-26"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-26</p>
        </div>
         <div style="position:absolute; top:250px; left:900px; ">
-       <a href="confirm"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/AG-27"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-27</p>
        </div>
 
