--- a/accounts/templates/accounts/rooms.html
+++ b/accounts/templates/accounts/rooms.html
@@ -31,26 +31,26 @@
     </div>
 
     <div style="position:absolute; top:150px; left:450px; ">
-        <a href='/account/confirm/AG-01'}'><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href='/account/confirm/{{ user.roll }}/AG-01'}'><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-01</p>
 
     </div>
        <div style="position:absolute; top:150px; left:550px;">
-            <a href="/account/confirm/AG-02" ><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+            <a href="/account/confirm/{{ user.roll }}/AG-02" ><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
            <p>AG-02</p>
        </div>
        <div style="position:absolute; top:150px; left:650px; ">
-        <a href="/account/confirm/AG-03"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/{{ user.roll }}/AG-03"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-03</p>
 
     </div>
        <div style="position:absolute; top:150px; left:750px; ">
-        <a href="/account/confirm/AG-04"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+        <a href="/account/confirm/{{ user.roll }}/AG-04"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-04</p>
 
     </div>
        <div style="position:absolute; top:150px; left:850px; ">
-       <a href="/account/confirm/AG-05"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
+       <a href="/account/confirm/{{ user.roll }}/AG-05"><img src= "{% static 'accounts/images/blue.png' %}" width="45px" height="45px"/></a>
         <p>AG-05</p>
 
     </div>
